--- a/artifact.tex
+++ b/artifact.tex
@@ -34,7 +34,9 @@ It is also possible to run VizAPI outside of Docker.
 In both cases, i.e., with and without Docker, the final graph is generated with the name \texttt{api-usage.html}, in the VizAPI 
 main directory.
 
-The following is an example input.json needed to reproduce the Graph 1 at \href{https://sruthivenkat.github.io/VizAPI-graph/}{https://sruthivenkat.github.io/VizAPI-graph/}:
+The following is an example input.json needed to reproduce the Graph 1 at 
+
+\href{https://sruthivenkat.github.io/VizAPI-graph/}{https://sruthivenkat.github.io/VizAPI-graph/}:
 \lstinputlisting[language=json,caption=Input Example,label=listing:input-example]{code-snippets/input-example.json}
 
 Some points to note are:
