--- a/introduction.tex
+++ b/introduction.tex
@@ -39,6 +39,6 @@ Our tool collects static information and also instruments Java code to collect d
 
 Using the tool's output, we empirically study how developers access libraries in practice, so that we (and others) can develop tools to help developers achieve more stability. Additionally, we present a classification framework to help developers classify different API uses. We conduct our study on a corpus of 11 open-source libraries and 90 clients. We have generated API usage data for this corpus of 101 projects, which we have made publicly available. 
 
-Our visualization tool, VizAPI, presents this information about API uses in practice as a d3 visualization, which can be useful to component developers when they want to introspect about their software. 
+Our visualization tool, VizAPI, presents this information about API uses in practice as a \texttt{D3.js} visualization, which can be useful to component developers when they want to introspect about their software. 
 
 We also apply the API usage information to explore the concept of library fission. We define library fission as splitting up a component into smaller sub-modules. The possible advantages of library fission includes lesser chances of breaking changes in clients of the library, and lesser chances of vulnerabilities and version conflicts introduced through dependencies.
