--- a/related-work.tex
+++ b/related-work.tex
@@ -20,7 +20,7 @@ is unsafe Java (especially used for performance), and Mastrangelo et al~\cite{ma
 use of unsafe Java in their benchmark suite. Amann et al ~\cite{amann2018systematic} perform an evaluation of API mis-use detectors and provide a classification of API mis-uses in their work. However, they focus on misuses that result in exceptions while we focus on mis-uses that are unexpected but do not lead to any errors or exceptions.
 
 \section{Our Applications}
-Our goal is to investigate client uses of library code, targetting two applications: the VizAPI visualization tool and library fission. Our results can help both client and library developers. Clients benefit from sharpened warnings about unsafe upgrades, knowledge that some upgrades are safe, and having reduced attack surfaces. Library upgrades have been investigated by many researchers, including Lam et al~\cite{lam20:_puttin_seman_seman_version} and Kura et al~\cite{kula18:_do_devel_updat_their_librar_depen}. Kura et al found that most software had outdated dependencies, and that software developers had negative feelings about being required to constantly upgrade their libraries. Foo et al~\cite{foo18:_effic_static_check_librar_updat} proposed a static analysis which detected safe upgrades, but could only certify safety for 10\% of upgrades. Our combined static and dynamic approach presents the developer with more information. The applications of this information---the VizAPI visualization tool and library fission enables easier upgrades. From the library side, library fission can help with maintainability---smaller libraries can be released with fewer worries about downstream effects.
+We investigate client uses of library code, targeting two applications: the VizAPI visualization tool and library fission. Clients benefit from sharpened warnings about unsafe upgrades, knowledge that some upgrades are safe, and having reduced attack surfaces. Library upgrades have been investigated by many researchers, including Lam et al~\cite{lam20:_puttin_seman_seman_version} and Kura et al~\cite{kula18:_do_devel_updat_their_librar_depen}. Kura et al found that most software had outdated dependencies, and that software developers had negative feelings about being required to constantly upgrade their libraries. Foo et al~\cite{foo18:_effic_static_check_librar_updat} proposed a static analysis which detected safe upgrades, but could only certify safety for 10\% of upgrades. Our combined static and dynamic approach presents the developer with more information. The applications of this information---the VizAPI visualization tool and library fission can potentially enable easier upgrades. From the library side, library fission can help with maintainability---smaller libraries can be released with fewer worries about downstream effects.
 
 \subsection{Library Fission}
 \label{sec:related-fission}
