add acknowledgement to readers

--- a/uw-ethesis-frontpgs.tex
+++ b/uw-ethesis-frontpgs.tex
@@ -104,6 +104,8 @@ Firstly, I would like to thank Dr. Patrick Lam for patiently and constantly guid
 
 I would also like to thank Dr. Jens Dietrich, our collaborator from the Victoria University of Wellington, for his invaluable inputs and for his multiple ideas to take this work in new interesting directions.
 
+I am also grateful to Dr. Meiyappan Nagappan and Dr. Michael Godfrey for reading my thesis and providing their insights to refine it. 
+
 \cleardoublepage
 
 % D E D I C A T I O N
