--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -705,3 +705,9 @@ series = {MSR '18}
   pages={37--42},
   year={2017}
 }
+
+@misc{godfrey22,
+  author = "Godfrey, Michael W.",
+  date = "2022-09-21",
+  howpublished = "personal communication"
+}
