--- a/conclusion.tex
+++ b/conclusion.tex
@@ -17,9 +17,10 @@ There is also the construct validity issue: tests may
 not adequately represent actual client behaviours. 
 Dietrich et al discuss this in their work~\cite{dietrich2017construction}; 
 they find that coverage by unit tests is low, 
-but is made up for by the fact that programmers are likely to write tests for the more relevant and popular
-parts of the code. Our use of both static
-and dynamic information addresses the issue of low coverage. 
+but is made up for by the fact that programmers are likely to write tests for the parts of the code
+that they believe to be most important. 
+The other issue is considering client test suites as a reasonable representation of how libraries are used by the client.
+Our use of both static and dynamic information addresses both this issue and that of low coverage. 
 
 Specifically, because we use
 class hierarchy analysis for our static analysis, our visualization will present
@@ -69,7 +70,7 @@ An interesting experiment would be to plot cumulative usage as the number of cli
 point.
 
 We can also extend our API usage study further by investigating why certain APIs are used the way that they are. 
-It was interesting to observe that reflection and \texttt{setAccessible()} are commonly used for serialization, this is done to gain access to fields of objects to be serialized.
+It was interesting to observe that reflection and \texttt{setAccessible()} are commonly used for serialization. This is done to gain access to fields of objects to be serialized.
 Other observations from our study include reflection and \texttt{setAccessible()} being used on methods, 
 reflection and \texttt{setAccessible()} being used on things that are already accessible (for example, public methods), 
 accesses to non-constant fields of a library by a client and so on. Understanding the reason for these usage patterns can aid in better API design in the future.
